[Refactor]: GoogleSttHelper 리팩토링